added some for details to the edit post page

--- a/styles/post.css
+++ b/styles/post.css
@@ -10,3 +10,11 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
+.commentslist {
+    background-color: grey;
+}
+
+.comment-text {
+    background-color: white;
+}
