--- a/styles/common.css
+++ b/styles/common.css
@@ -18,9 +18,13 @@
     padding: 0;
 }
 
-.hr-line {
+.separator {
 	margin-top: 0px;
 	margin-bottom: 4px;
-	color: black;
-	border-top: 1px solid black;
+	color: grey;
+	border-top: 1px solid grey;
+}
+
+.no-border {
+    border-bottom: 0px !important;
 }
