--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -22,6 +22,11 @@ body {
 .card {
     overflow: hidden !important;
     border : 0 !important;
+    
+}
+
+.card:hover {
+    box-shadow: 0 0 40px rgba(33, 33, 33, .2);
 }
 
 .card-body {
