--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -6,10 +6,18 @@ body {
 .postowner {
     background-color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
 }
+
+.left_col{
+    background-color: white;
+  }
+  .right_col{
+    background-color: #e9ecef
+  }
 
 .card-wrapper {
     border-radius: 25px !important;
@@ -20,8 +28,11 @@ body {
 }
 
 .card {
+    display: flex;
+    flex-direction: row !important;
     overflow: hidden !important;
     border : 0 !important;
+    background-color: #e9ecef !important;
     
 }
 
@@ -31,7 +42,6 @@ body {
 
 .card-body {
     background-color: #e9ecef;
-    padding : 10px;
 }
 
 i {
@@ -42,6 +52,7 @@ i {
     line-height: 18px;
     max-height: 54px; /* line-height * 3 */
     overflow: hidden;
+    font-size: 14px;
 }
 
 .modal-dialog .confirm-btn {
@@ -53,4 +64,6 @@ i {
 .modal-dialog {
     max-width: 345px !important;
 }
+
+
 
