--- a/styles/common.css
+++ b/styles/common.css
@@ -28,3 +28,17 @@
 .no-border {
     border-bottom: 0px !important;
 }
+
+.modal-dialog .form-control {
+    border: 0;
+    background-color: #e9ecef;
+}
+
+.modal-dialog .btn {
+    margin-top : 30px;
+    margin-bottom : 15px;
+}
+
+.modal-dialog .gosignup {
+    text-align: center;
+}
