--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -55,13 +55,13 @@ i {
     font-size: 14px;
 }
 
-.modal-dialog .confirm-btn {
+.confirm-modal .confirm-btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.modal-dialog {
+.confirm-modal {
     max-width: 345px !important;
 }
 
