Fixing small issues like adding pointer cursor on thrash and elipsis icons and some notification messages

--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -2,6 +2,9 @@ body {
     background-color: #ffeedd !important; 
 }
 
+.c-pointer {
+    cursor: pointer;
+}
 
 .postowner {
     background-color: white;
